# lrpc

./: Cargo.toml  LICENSE  README.md
lrpc-csharp/buf/: RecvBuf.cs  SendData.cs
lrpc-csharp/fun/: Fun.cs
lrpc-csharp/src/lrpc/tcp/: Connection.cs
lrpc-csharp/src/lrpc/val/: Store.cs
lrpc-csharp/tcp/: Service.cs
lrpc-csharp/val/: ByteQue.cs
lrpc-go/: README.md  go.mod
lrpc-go/buf/: buf.go  buf_test.go
lrpc-go/fun/: fun.go  fun_test.go
lrpc-go/tcp/: tcp.go  tcp_test.go
lrpc-go/val/: val.go  val_test.go
lrpc-java/src/com/lrpc/buf/: RecvBuf.java  SendData.java
lrpc-java/src/com/lrpc/fun/: Fun.java  Regist.java
lrpc-java/src/com/lrpc/tcp/: Connection.java  Service.java
lrpc-java/src/com/lrpc/val/: ByteQue.java  Store.java  StoreFields.java
lrpc-macros/: Cargo.toml
lrpc-rust/: Cargo.toml
lrpc-rust/lrpc-macros/: Cargo.toml  README.md
lrpc-rust/src/: fun.rs  tcp.rs  tests.rs  val.rs
macros/: Cargo.toml
macros/src/: derive.rs  lib.rs
src/: buf.rs  lib.rs
