[package]
name = "lrpc-macros"
version = "1.0.0"
authors = ["lipogem"]
edition = "2018"
license = "MIT"
description = "lrpc's proc macros"
repository = "https://github.com/lipogem/lrpc"
keywords = ["rpc", "lrpc", "proc_macro"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true
